k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    argocd.argoproj.io/hook-mandatory: "true"
    argocd.argoproj.io/hook-parameters: |
      {
        "name": "clone-build-push-run",
        "namespace": "cs490-project"
      }
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: davidmc1/cs490-project:latest
        ports:
        - containerPort: 5000
