k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - name: "https"
    port: 443
    targetPort: 5000
  - name: "http"
    port: 80
    targetPort: 5000
